--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">FirstSession</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
 </resources>
