--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">FirstSession</string>
     <string name="email">Email</string>
     <string name="password">Password</string>
+    <string name="sign_up">Sign Up</string>
 </resources>
